grid add and hover functionality completed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
+    <div class="controller">
+        <button class="clear-btn">Clear</button>
+        <button class="eraser-btn">Eraser</button>
+        <div class="slider-div">
+            <input type="range" min = '1' max= '64' value="25" id="slider">
+            <p class="range-value"></p>
+        </div>
+    </div>
     <div class="container"></div>
     <script src="main.js"></script>
 </body>
